update hydraulic model examples

--- a/examples/Hydrological model/Note books/coello-distributed-model-calibratation-.ipynb
+++ b/examples/Hydrological model/Note books/coello-distributed-model-calibratation-.ipynb
@@ -35,10 +35,7 @@
     "the currect work directory should be at the root directory of the repository\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -55,7 +52,7 @@
     "import Hapi.rrm.hbv_bergestrom92 as HBV\n",
     "\n",
     "from Hapi.rrm.distparameters import DistParameters as DP\n",
-    "import Hapi.sm.performancecriteria as PC"
+    "import statista.metrics as PC"
    ]
   },
   {
@@ -90,6 +87,13 @@
    "source": [
     "# Calibration Object"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
