move calibration to the upper level directory

--- a/examples/hydrological-model/Note books/Lumped_Model_Calib.ipynb
+++ b/examples/hydrological-model/Note books/Lumped_Model_Calib.ipynb
@@ -47,7 +47,7 @@
                 "\n",
                 "import Hapi.rrm.hbv_bergestrom92 as HBVLumped\n",
                 "import Hapi.sm.performancecriteria as PC\n",
-                "from Hapi.rrm.calibration import Calibration\n",
+                "from Hapi.calibration import Calibration\n",
                 "from Hapi.rrm.routing import Routing\n",
                 "from Hapi.run import Run"
             ]
