--- a/examples/hydrological-model/Note books/coello-distributed-model-calibratation-.ipynb
+++ b/examples/hydrological-model/Note books/coello-distributed-model-calibratation-.ipynb
@@ -49,7 +49,7 @@
                 "import numpy as np\n",
                 "import datetime as dt\n",
                 "from osgeo import gdal\n",
-                "from Hapi.rrm.calibration import Calibration\n",
+                "from Hapi.calibration import Calibration\n",
                 "import Hapi.rrm.hbv_bergestrom92 as HBV\n",
                 "\n",
                 "from Hapi.rrm.distparameters import DistParameters as DP\n",
