mock the integration test for the get_parameters to download only one parameter set

--- a/examples/hydrological-model/Note books/coello-distributed-model-calibratation-.ipynb
+++ b/examples/hydrological-model/Note books/coello-distributed-model-calibratation-.ipynb
@@ -53,7 +53,7 @@
                 "import Hapi.rrm.hbv_bergestrom92 as HBV\n",
                 "\n",
                 "from Hapi.rrm.distparameters import DistParameters as DP\n",
-                "import statista.metrics as PC"
+                "import statista.descriptors as PC"
             ]
         },
         {
